--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\SriramKiranSenthilku\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\DELL\\AppData\\Local\\Android\\Sdk
 flutter.sdk=C:\\src\\flutter
 flutter.buildMode=release
 flutter.versionName=20.4.38
